k8s-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-webapp
  namespace: jenkins-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins-webapp
  template:
    metadata:
      labels:
        app: jenkins-webapp
    spec:
      containers:
      - name: web-container
        image: DEIN_DOCKER_USER/website-image:latest # Wird von Jenkins befüllt
        ports:
        - containerPort: 80
