k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-webapp
  namespace: jenkins-webapp
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # Reicht aus, da Traefik den Traffic übernimmt
